...
        android:layout_marginTop="10dp" />

    <Button
        android:text=""
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/imdb"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:text=""
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/wiki"
        android:onClick="onClick"
        android:layout_below="@+id/imdb"
        android:layout_centerHorizontal="true" />

    <Button
        android:text=""
...
