...

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/search_show_title"
            android:hint="@string/series_name_bar"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:layout_above="@+id/search_confirm_basic"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/search"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
...
